--- a/scripts/monsters-cover.tex
+++ b/scripts/monsters-cover.tex
@@ -4,3 +4,11 @@
 \includepdf{covers/cairn-monsters-front-cover-pl.png}}
 \posttitle{\end{center}}
 \thispagestyle{empty}
+\setcounter{page}{0}
+\let\oldtoc\tableofcontents
+\renewcommand{\tableofcontents}{\oldtoc\newpage}
+\renewcommand{\contentsname}{Spis treści}
+\widowpenalty=10000
+\clubpenalty=10000
+\usepackage{atbegshi}
+\AtBeginDocument{\AtBeginShipoutNext{\AtBeginShipoutDiscard}}
